<resources>
    <string name="app_name">HomeworkMtsTeta</string>
    <string name="search_button">Кнопка поиска</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="background_description">Постер на заднем плане</string>
    <string name="star_description">Звезда</string>
    <string name="actor_image">Фотография актёра/актрисы</string>
    <string name="navigation_bar_home">Кнопка "Домой"</string>
    <string name="navigation_bar_profile">Кнопка "Профиль"</string>
    <string name="poster_movie">Постер фильма</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- fragment movie details -->
    <string name="movie_genre">боевики</string>
    <string name="movie_release_date">22.04.2021</string>
    <string name="movie_age_limit">18+</string>

    <string name="movie_title">Гнев человеческий</string>

    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>

    <string name="movie_actors_title">Актеры</string>
    <string name="movie_actor_jason_statham">Джейсон Стэйтем</string>
    <string name="movie_actor_holt_mccallany">Холт Маккэллани</string>
    <string name="movie_actor_josh_hartnett">Джош Харнетт</string>

    <!-- fragment profile -->
    <string name="profile_name_example">Константин</string>
    <string name="profile_email_example">konst.89@mail.com</string>

    <string name="profile_interests_title">Интересы</string>

    <string name="profile_personal_data_title">Личные данные</string>
    <string name="profile_name_hint">Имя</string>
    <string name="profile_password_hint">Пароль</string>
    <string name="profile_email_hint">E-mail</string>
    <string name="profile_phone_hint">Телефон</string>

    <string name="profile_settings_title">Настройки</string>
    <string name="profile_settings_notifications">Уведомления и звуки</string>
    <string name="profile_settings_privacy">Конфиденциальность</string>
    <string name="profile_settings_theme">Тема</string>
    <string name="profile_settings_language">Язык</string>
    <string name="profile_settings_memory">Данные и память</string>

    <string name="profile_app_title">Приложение</string>
    <string name="profile_app_ask">Задать вопрос</string>
    <string name="profile_app_problem">Сообщить о проблеме</string>
    <string name="profile_exit_button">Выйти</string>
</resources>